--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml
@@ -35,7 +35,10 @@
     <tr>
         <td class="ColumnStype ColunTD TDStyle"><label class="Font">Other Photo</label></td>
         <td class="TDStyle">
-            <img src="~/Image/Icon/Picture.png" style="cursor: pointer;" onclick="OpenOthersPicture()" width="30" height="30" />
+            @if (Model.FinalInspection.HasOtherImage)
+            {
+                <img src="~/Image/Icon/Picture.png" style="cursor: pointer;" onclick="OpenOthersPicture()" width="30" height="30" />
+            }
         </td>
     </tr>
     <tr>
