--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -344,7 +344,6 @@
     function IsEditModeChange() {
         EditModeButtionBind();
         Clear();
-
         if (EditMode) {
             $(".queryHeader select").attr("disabled", "disabled");
             $('#btnNew').unbind('click').addClass("IsEditModeQuery");
@@ -422,6 +421,9 @@
                 EditMode = true;
                 EditType = "New";
                 $("#SaveSubmit").attr("name", "Action:New"); //--
+
+                $('#Detail_TestBeforePicture').val('');
+                $('#Detail_TestAfterPicture').val('');
                 IsEditModeChange();
             });
 
@@ -481,10 +483,20 @@
             });
 
             $('#Picture').on('click', function () {
-                if ($('#Detail_ReportNo').val() != null && $('#Detail_ReportNo').val() != "") {
-                    var para = "?EditMode=" + EditMode + "&Title=PullingTest&TargetBeforeColumn=Detail_TestBeforePicture&TargetAfterColumn=Detail_TestAfterPicture&Table=ManufacturingExecution.dbo.PullingTest&BeforeColumn=TestBeforePicture&AfterColumn=TestAfterPicture&PKey_1=ReportNo&PKey_1_Val=" + $('#Detail_ReportNo').val();
+                @*if ($('#Detail_ReportNo').val() != null && $('#Detail_ReportNo').val() != "") {
+                    var para = "?EditMode=" + EditMode + "&Title=PullingTest&TargetBeforeColumn=Detail_TestBeforePicture&TargetAfterColumn=Detail_TestAfterPicture&Table=PullingTest&BeforeColumn=TestBeforePicture&AfterColumn=TestAfterPicture&PKey_1=ReportNo&PKey_1_Val=" + $('#Detail_ReportNo').val();
                     window.open('@Url.Action("PictureList","PublicWondow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
-                }
+                }*@
+
+                var para = "?Title=PullingTest&EditMode=" + EditMode;
+                para += "&" + "Table=PullingTest";
+                para += "&" + "TargetBeforeColumn=Detail_TestBeforePicture";
+                para += "&" + "TargetAfterColumn=Detail_TestAfterPicture";
+                para += "&" + "BeforeColumn=TestBeforePicture";
+                para += "&" + "AfterColumn=TestAfterPicture";
+                para += "&" + "PKey_1=ReportNo";
+                para += "&" + "PKey_1_Val=" + $('#ReportNoText').val();
+            window.open('@Url.Action("PictureList", "PublicWondow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
             });
         }
 
