ISP20211490 - Setting頁面邏輯調整

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -292,7 +292,7 @@
                         {
                             <tr class="row-content" style="vertical-align: middle; text-align: center;">
                                 <td>
-                                    <input type="checkbox" ID="ShipmodeSeq_Select_[@i]" class="messageCheckbox" Idx=@i Seq=@Model.SelectOrderShipSeq[i].Seq OrderID=@Model.SelectOrderShipSeq[i].OrderID onclick="SelectOrderShipSeqChange(this)" style="width: 1.4em;" />
+                                    <input type="checkbox" ID="ShipmodeSeq_Select_[@i]" class="messageCheckbox" Idx=@i Seq=@Model.SelectOrderShipSeq[i].Seq OrderID=@Model.SelectOrderShipSeq[i].OrderID onclick="SelectOrderShipSeqChange(this)" style="width: 1.4em;" qty=" @Model.SelectOrderShipSeq[i].Qty"/>
                                 </td>
                                 <td>
                                     @Html.DisplayFor(o => Model.SelectOrderShipSeq[i].Seq)
@@ -599,13 +599,14 @@
                             var index = $("#currnetSelectedPO").val();
                             document.getElementById("SelectedPO[" + index + "].Cartons").value = checkedList.join(',');
 
-                            var orderID = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderId");
-                            document.getElementById("SelectedPO[" + index + "].AvailableQty").value = totalQty;
+                            if (currentStage != 'Final') {
+                                var orderID = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderId");
+                                document.getElementById("SelectedPO[" + index + "].AvailableQty").value = totalQty;
 
-                            table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = totalQty;
-                            Order_AvailableQty[orderID] = totalQty;
-                            Cacu_AvailableQty();
-
+                                table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = totalQty;
+                                Order_AvailableQty[orderID] = totalQty;
+                                Cacu_AvailableQty();
+                            }
                             $(this).dialog("close");
                         }
                         , "class": "button"
@@ -623,11 +624,12 @@
                         click: function () {
 
                             var checkedList = [];
-
+                            var totalQty = 0;
                             $('[id^=ShipmodeSeq_Select_]').each(function () {
 
                                 if ($(this).prop('checked')) {
                                     //checkedList.push($(this).val());
+                                    totalQty = totalQty + parseInt($(this).attr("Qty"));
                                     checkedList.push($(this).attr("seq"));
                                 }
                             });
@@ -639,6 +641,17 @@
                             }
 
                             document.getElementById("SelectedPO[" + index + "].Seq").value = checkedList.join(',');
+
+                            if (currentStage == 'Final') {
+
+                                var orderID = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderId");
+                                document.getElementById("SelectedPO[" + index + "].AvailableQty").value = totalQty;
+
+                                table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = totalQty;
+                                Order_AvailableQty[orderID] = totalQty;
+                                Cacu_AvailableQty();
+                            }
+
                             $(this).dialog("close");
                         }
                         , "class": "button"
@@ -1003,8 +1016,29 @@
 
             currentStage = value;
 
-            /* ISP20211490 拔掉
+            var brandid = $('#BrandID').val();
             var availableQtycheck = $('input[col=AvailableQty]');
+
+            if (brandid = 'ADIDAS') {
+
+                if (currentStage == "Final") {
+
+                    $.each(availableQtycheck, function () {
+                        $($(this)[0]).attr("readonly", "readonly");
+                    });
+                }
+                else {
+                    $.each(availableQtycheck, function () {
+                        $($(this)[0]).removeAttr("readonly");
+                    });
+                }
+            }
+            else {
+                $.each(availableQtycheck, function () {
+                    $($(this)[0]).removeAttr("readonly");
+                });
+            }
+            /* ISP20211490 拔掉
 
             $.each(availableQtycheck, function () {
                 if (currentStage == "Final") {
