ISP20211499 - 修正前端錯誤

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -514,7 +514,7 @@
                     });
 
 
-                    $.each(sizeArrList.filter(onlyUnique), function (index, value) {
+                    $.each(sizeArrList, function (index, value) {
                         sizeOption += "<option value=" + value + " >" + value + "</option>";
                     });
 
