--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -344,7 +344,6 @@
     function IsEditModeChange() {
         EditModeButtionBind();
         Clear();
-
         if (EditMode) {
             $(".queryHeader select").attr("disabled", "disabled");
             $('#btnNew').unbind('click').addClass("IsEditModeQuery");
@@ -354,7 +353,7 @@
             $('#btnQuery').addClass("IsEditModeQuery");
 
             $("#Edit, #Delete").removeClass("IsEditMode");
-            $('#Save, #Undo, #New').addClass("IsEditMode");
+            $('#Save, #Undo, #New, #Picture').addClass("IsEditMode");
 
             if (EditType == "New") {
                 $(".DetailTable input:not(#ReportNoText,#Detail_LastEditName,#ResultText,#PullForceUnitText,#Detail_InspectorName), .DetailTable select").removeAttr("disabled");
@@ -482,7 +481,7 @@
 
             $('#Picture').on('click', function () {
                 if ($('#Detail_ReportNo').val() != null && $('#Detail_ReportNo').val() != "") {
-                    var para = "?EditMode=" + EditMode + "&Title=PullingTest&TargetBeforeColumn=Detail_TestBeforePicture&TargetAfterColumn=Detail_TestAfterPicture&Table=ManufacturingExecution.dbo.PullingTest&BeforeColumn=TestBeforePicture&AfterColumn=TestAfterPicture&PKey_1=ReportNo&PKey_1_Val=" + $('#Detail_ReportNo').val();
+                    var para = "?EditMode=" + EditMode + "&Title=PullingTest&TargetBeforeColumn=Detail_TestBeforePicture&TargetAfterColumn=Detail_TestAfterPicture&Table=ExtendServer.ManufacturingExecution.dbo.PullingTest&BeforeColumn=TestBeforePicture&AfterColumn=TestAfterPicture&PKey_1=ReportNo&PKey_1_Val=" + $('#Detail_ReportNo').val();
                     window.open('@Url.Action("PictureList","PublicWondow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
                 }
             });
