--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -421,6 +421,10 @@
                 EditMode = true;
                 EditType = "New";
                 $("#SaveSubmit").attr("name", "Action:New"); //--
+
+                $('#Detail_TestBeforePicture').val('');
+                $('#Detail_TestAfterPicture').val('');
+
                 IsEditModeChange();
             });
 
