ISP20211592 - RFT_Inspection_Measurement.FactoryID存入是Orders.FtyGroup，因此輸入SP#要搜尋時，也應該是要找Orders.FtyGroup去比對RFT_Inspection_Measurement.FactoryID ISP20211593 - 讓最後一個檢驗完後，觸發該SP#是否檢驗完成的驗證，若檢驗完成則清空畫面的值

--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -2115,6 +2115,31 @@
             success: function (data) {
                 if (data.Result == 0) {
                     $('#txtSP').val("");
+
+                    $('#txtStyle').val("");
+                    $('#txtBrand').val("");
+                    $('#txtSeason').val("");
+                    $('#txtProductTypePMS').val("");
+                    $('#txtSampleStage').val("");
+                    $('#txtOriginalLine').val("");
+                    $('#txtOrderQty').val("");
+
+                    $('#txtArticle').val("");
+                    $('#txtSize').val("");
+                    $('#txtProductType').val("");
+                    $('#txtSizeQty').val("");
+                    $('#txtSizeBalanceQty').val("");
+                    $('#txtOrderBalanceQty').val("");
+
+                    $('#txtPass').val("");
+                    $('#txtReject').val("");
+                    $('#txtHard').val("");
+                    $('#txtQuick').val("");
+                    $('#txtWash').val("");
+                    $('#txtRepl').val("");
+                    $('#txtPrint').val("");
+                    $('#txtShade').val("");
+                    $('#txtDispose').val("");
                     msg.WithError(data.ErrMsg);
                 }
                 else {
@@ -2353,6 +2378,7 @@
                 if (data.Result) {
                     msg.WithSuccesCheck("You pass 1 garment.", function () {
                         $('#btnRefresh').click();
+                        SPCheck(OrderID);
                     });
                 }
                 else {
