--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
@@ -128,13 +128,25 @@
                                             </h4>
                                         </td>
                                         <td>
+                                            <h4 id="Excel" style="margin-right: 1em;">
+                                                <img src="~/Image/Icon/XLS.png" width="30" />
+                                                Excel
+                                            </h4>
+                                        </td>
+                                        <td>
+                                            <h4 id="PDF" style="margin-right: 1em;">
+                                                <img src="~/Image/Icon/PDF.png" width="30" />
+                                                PDF
+                                            </h4>
+                                        </td>
+                                        <td>
                                             <h4 id="Picture" style="margin-right: 1em;">
                                                 <img src="~/Image/Icon/Camera.png" width="30" />
                                                 Picture
                                             </h4>
                                         </td>
                                         <td style="width: 50%;"></td>
-                                </tbody>
+</tbody>
                             </table>
                         </div>
                     </div>
@@ -276,9 +288,9 @@
                 // Edit文字顏色變得跟其他Submit按鈕一樣
                 $("#Edit").css("color", "rgba(66,66,66,255)");
 
-                $("#Edit,#Encode,#Amend").removeClass("IsEditMode");
+                $("#Edit,#Encode,#Amend, #Excel, #PDF").removeClass("IsEditMode");
                 $("#Edit,#Encode,#Amend").attr("disabled", "disabled");
-                $('#Encode,#Amend').unbind('click');
+                $('#Encode,#Amend, #Excel, #PDF').unbind('click');
                 $('#Save').addClass("IsEditMode");
                 $("#Save").removeAttr("disabled", "disabled");
                 $(".DataTable input[type='text'],.DataTable select").removeAttr("disabled", "disabled");
@@ -290,6 +302,7 @@
                 $("#Save").attr("disabled", "disabled");
                 $("#Edit,#Encode,#Amend").removeAttr("disabled", "disabled");
                 $(".DataTable input[type='text'],.DataTable select").attr("disabled", "disabled");
+                $('#Excel, #PDF').addClass("IsEditMode");
 
                 if ('@Model.AIR_LaboratoryID' != '') {
                     $("#Edit").addClass("IsEditMode");
@@ -342,7 +355,42 @@
 
                 window.open('@Url.Action("PictureList","PublicWondow",new{Area=""})' + para, 'Picture', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
             });
+
+            $('#Excel').unbind('click').on('click', function () {
+                ToReport(false);
+            });
+
+            $('#PDF').unbind('click').on('click', function () {
+                ToReport(true);
+            });
         }
+
+    function ToReport(IsToPDF) {
+        $.ajax({
+            url: "@Url.Action("WashReport", "AccessoryOvenWash", new { Area = "BulkFGT" })",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({
+                AIR_LaboratoryID: $("#AIR_LaboratoryID").val(),
+                POID: $("#POID").val(),
+                Seq1: $("#Seq1").val(),
+                Seq2: $("#Seq2").val(),
+                IsToPDF: IsToPDF
+            }),
+            async: false,
+            success: function (data) {
+                if (data.Result) {
+                    window.location.href = data.reportPath;
+                }
+                else {
+                    msg.WithError(data.ErrorMessage);
+                }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                console.log(xhr.responseText);
+            }
+        });
+    }
 
     function ResultChange() {
 
